


Open Plans:

* start of C standardization
* codegen: split of functions (big modules into multiple C functions)
* ...

 GnuCOBOL 3.2 to be released until September 2021

* Changes to the COBOL compiler (cobc) options:

** adjustments to warning options:
   -Wconstant-expression was changed to a group warning and includes
    the new, previously integrated, -Wconstant-numlit-expression



* Known issues in 3.1

** testsuite:
  * if built with vbisam, cisam or disam, depending on the version used, some
    tests will lead to UNEXPECTED PASS, while others may fail
  * possibly failing tests (false positives):
    * temporary path invalid
    * compiler outputs (assembler)
    * function with variable-length RETURNING item

** the recent additions of ">> TURN" and "variable LIKE variable" do not work
   as expected in all cases


 GnuCOBOL 3.1 (October 2020)

* New GnuCOBOL features

** XML GENERATE statement
   (note: runtime support needs additional library libxml2)

** JSON GENERATE statement
   (note: runtime support needs additional library cJSON or json-c)
   
** CONTINUE AFTER statement (COBOL 202x) implemented, also handle fractions
   of seconds in C$SLEEP now
   
** TYPEDEF and SAME AS (COBOL 2002) implemented, including the MicroFocus
   and RM/COBOL variants

   TO BE MERGED (not in trunk yet):
** >>TURN (COBOL 2002) directive implemented, allowing some exception checks
   to be turned on/off per source as desired

** on abort a stack trace will be genereated, this can be suppressed by
   runtime configuration option COB_STRACK_TRACE

** Improved support for different compiler extensions (ACUCOBOL, IBM,
   Fujitsu, MicroFocus COBOL, Microsoft COBOL, RM/COBOL, CA Realia and more)
   including EXHIBIT / EXHIBIT NAMED

** support for MicroFocus extension "LOCAL-STORAGE implies RECURSIVE"
   defaults to "on" for `-std=mf` and `-std=mf-strict`!

** file handling: include support for a callable EXTFH interface also provided